--- a/TrangChu/index.html
+++ b/TrangChu/index.html
@@ -10,11 +10,11 @@
 <body>
     <div id="menu">
   <ul>
-      <li><a href="TrangChu/index.html"title="Trang Chủ" class="name">Trang Chủ</a></li>
-      <li><a href="SanPham/index.ht"title="Giới Thiệu">Giới Thiệu</a></li>
-      <li><a href="#"title="Tin Tức">Tin Tức</a></li>
-      <li><a href="SanPham/index.html"title="Sản Phẩm">Sản Phẩm</a></li>
-      <li><a href="#"title="Liên Hệ">Liên Hệ</a></li>
+      <li><a href="/TrangChu/index.html"title="Trang Chủ" class="name">Trang Chủ</a></li>
+      <li><a href="/SanPham/index.ht"title="Giới Thiệu">Giới Thiệu</a></li>
+      <li><a href="/TINTUC/index.html"title="Tin Tức">Tin Tức</a></li>
+      <li><a href="/SanPham/index.html"title="Sản Phẩm">Sản Phẩm</a></li>
+      <li><a href="/LienHe/index.html"title="Liên Hệ">Liên Hệ</a></li>
       <li><a href="/DANGNHAP/dangnhap.html">Đăng Nhập</a></li>
   </ul>
     </div>
