--- a/SanPham/index.html
+++ b/SanPham/index.html
@@ -43,11 +43,8 @@
 		<span style="text-align: center;width: 150px;transform: rotate(45deg);  top: 12px;right: -49px;position: absolute;background-color: red;color: gold;padding: 3px 10px;font-weight: bold;" >HOT</span>
 		<div class="caption">
 			<h3> Ví - Guess họa tiết phối logo DS Xám hồng</h3>
-			<b style="font-size: 18px;color: red" >15.000.000 
-				<sup>đ</sup></b>
-			<b style="font-size: 18px;color: #aaa;text-decoration: line-through;" >30.000.000 
-				<sup>đ</sup></b>
-
+			<b style="font-size: 18px;color: red" >15.000.000 <sup>đ</sup></b>
+			<b style="font-size: 18px;color: #aaa;text-decoration: line-through;" >30.000.000 <sup>đ</sup></b>
 			<p>
 				Túi đeo chéo Coach nắp gập phối khóa xoay kiểu dáng thời trang, dễ phối với trang phục. 
 			</p>
@@ -60,7 +57,7 @@
 
     <span style="text-align: center;width: 150px;transform: rotate(45deg);  top: 12px;right: -49px;position: absolute;background-color: red;color: gold;padding: 3px 10px;font-weight: bold;" >HOT</span>
     <div class="caption">
-        <h3> Ví - Guess họa tiết phối logo DS Xám hồng</h3>
+        <h3>Ví - Guess họa tiết phối logo DS Xám hồng</h3>
         <b style="font-size: 18px;color: red" >15.000.000 
             <sup>đ</sup></b>
         <b style="font-size: 18px;color: #aaa;text-decoration: line-through;" >30.000.000 
@@ -82,10 +79,8 @@
     <span style="text-align: center;width: 150px;transform: rotate(45deg);  top: 12px;right: -49px;position: absolute;background-color: red;color: gold;padding: 3px 10px;font-weight: bold;" >HOT</span>
     <div class="caption">
         <h3> Ví - Guess họa tiết phối logo DS Xám hồng</h3>
-        <b style="font-size: 18px;color: red" >15.000.000 
-            <sup>đ</sup></b>
-        <b style="font-size: 18px;color: #aaa;text-decoration: line-through;" >30.000.000 
-            <sup>đ</sup></b>
+        <b style="font-size: 18px;color: red" >15.000.000 <sup>đ</sup></b>
+        <b style="font-size: 18px;color: #aaa;text-decoration: line-through;" >30.000.000<sup>đ</sup></b>
 
         <p>
             Túi đeo chéo Coach nắp gập phối khóa xoay kiểu dáng thời trang, dễ phối với trang phục. 
